Fixed alignment and adjusted statistics

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -469,7 +469,7 @@ body {
 
 .information .skills .html .eq-html .h {
     height: 100%;
-    width: 93%;
+    width: 94%;
     background-color: #C49B66;
 }
 
@@ -517,7 +517,7 @@ body {
 
 .information .skills .javascript .eq-javascript .ja {
     height: 100%;
-    width: 80%;
+    width: 83%;
     background-color: #C49B66;
 }
 
